# engauge-digitizer

./: .buildinfo  .gitattributes  .gitignore  BUILD  Bugs.md  CHANGELOG.md  CMakeLists.txt  LINUX_RUNTIME_NOTES.md  README.md  RECREATE_REPO.md  RELEASE_WORKFLOW.md  STATIC_BUILD_LINUX.md  ToDo.md  build-and-release.html  build_linux_almoststaticqt.sh  build_linux_coverage.sh  build_linux_systemqt.sh  build_windows_conan.sh  build_windows_mxe.sh  changelog.html  cli.html  community.html  conanfile.txt  coordinates.html  developer.html  dialogs.html  export.html  faq.html  genindex.html  git-conventional-commits.yaml  glossary.html  index.html  linux-runtime.html  objects.inv  overview.html  package.json  pnpm-lock.yaml  privacy-policy.html  search.html  searchindex.js  (+2 more)
.doctrees/: build-and-release.doctree  changelog.doctree  cli.doctree  community.doctree  coordinates.doctree  developer.doctree  dialogs.doctree  environment.pickle  export.doctree  faq.doctree  glossary.doctree  index.doctree  linux-runtime.doctree  overview.doctree  privacy-policy.doctree  static-linux.doctree  tutorials.doctree
.doctrees/dialogs/: coordinates.doctree  curve-geometry.doctree  curves.doctree  discretize.doctree  export.doctree  geometry-window.doctree  measure-geometry.doctree  measures.doctree  point-match.doctree  segments.doctree  sessions.doctree
.doctrees/faq/: better-accuracy.doctree  context-menu-windows.doctree  date-formats.doctree  digitize-line-graphs.doctree  digitize-point-graphs.doctree  discretizing.doctree  fixing-axis-points.doctree  floating-axes.doctree  getting-data-out.doctree  measuring.doctree  multiple-coord-systems.doctree  other-help.doctree  point-match-requirements.doctree  select-mode.doctree  selecting-points.doctree  timezone.doctree
.doctrees/tutorials/: auto-line-graph.doctree  auto-point-graph.doctree  manual-line-graph.doctree  manual-map.doctree  manual-point-graph.doctree
.githooks/: commit-msg  post-checkout  post-commit  post-merge  pre-push
.github/workflows/: docs-sphinx.yml
_sources/: build-and-release.rst.txt  changelog.md.txt  cli.rst.txt  community.rst.txt  developer.rst.txt  dialogs.rst.txt  export.rst.txt  faq.rst.txt  index.rst.txt  linux-runtime.rst.txt  overview.rst.txt  privacy-policy.rst.txt  static-linux.rst.txt  tutorials.rst.txt
_sources/dialogs/: coordinates.rst.txt  curve-geometry.rst.txt  curves.rst.txt  discretize.rst.txt  export.rst.txt  measure-geometry.rst.txt  point-match.rst.txt
_sources/faq/: better-accuracy.rst.txt  context-menu-windows.rst.txt  digitize-line-graphs.rst.txt  digitize-point-graphs.rst.txt  discretizing.rst.txt  fixing-axis-points.rst.txt  getting-data-out.rst.txt  measuring.rst.txt  multiple-coord-systems.rst.txt  other-help.rst.txt  point-match-requirements.rst.txt  select-mode.rst.txt  timezone.rst.txt
_sources/tutorials/: auto-line-graph.rst.txt  auto-point-graph.rst.txt  manual-line-graph.rst.txt  manual-point-graph.rst.txt
_static/: documentation_options.js
dev/: ProcessFlowchart.odp  SpreadsheetsForDoc.odp  SpreadsheetsForDocs.ods
dialogs/: coordinates.html  curve-geometry.html  curves.html  discretize.html  export.html  geometry-window.html  measure-geometry.html  measures.html  point-match.html  segments.html  sessions.html
doc/: EngaugeIForums.ods
docs/: Makefile  deploy.sh  make.bat  pyproject.toml
docs/source/: build-and-release.rst  cli.rst  community.rst  conf.py  coordinates.rst  developer.rst  dialogs.rst  export.rst  faq.rst  glossary.rst  index.rst  linux-runtime.rst  migration-plan.rst  privacy-policy.rst  qt6-readiness.rst  static-linux.rst  windows-build-status.rst
faq/: better-accuracy.html  context-menu-windows.html  date-formats.html  digitize-line-graphs.html  digitize-point-graphs.html  discretizing.html  fixing-axis-points.html  floating-axes.html  getting-data-out.html  measuring.html  multiple-coord-systems.html  other-help.html  point-match-requirements.html  select-mode.html  selecting-points.html  timezone.html
samples/: inverse.pbm  inverse.pgm  inverse.ppm  inverse.xbm  inverse.xpm  jpeg2000.jp2
samples/sources/: FourAxisLog.ods  OdfSpreadsheet.ods  RedGreenBlue.odp  StrangeUnits.odp  map.odp
scripts/: build_linux_coverage.sh  build_linux_systemqt.sh  build_windows_conan.sh  deploy.sh  deploy_docs.sh  docccc
src/: .gitignore
src/Checklist/: ChecklistGuideBrowser.cpp
src/Cmd/: CmdAbstract.cpp
src/CoordSystem/: CoordSystemInterface.h
src/Create/: CreateActions.cpp  CreateHelpWindow.cpp
src/Cursor/: CursorFactory.cpp  CursorSize.cpp
src/DigitizeState/: DigitizeStateAbstractBase.h  DigitizeStateColorPicker.cpp
src/Dlg/: DlgAbout.cpp  DlgImportAdvanced.cpp  DlgImportAdvanced.h  DlgImportCroppingPdf.cpp  DlgSettingsAxesChecker.cpp  DlgSettingsAxesChecker.h  DlgSettingsColorFilter.cpp  DlgSettingsColorFilter.h  DlgSettingsCoords.cpp  DlgSettingsCoords.h  DlgSettingsCurveProperties.cpp  DlgSettingsCurveProperties.h  DlgSettingsDigitizeCurve.cpp  DlgSettingsDigitizeCurve.h  DlgSettingsExportFormat.cpp  DlgSettingsExportFormat.h  DlgSettingsGridDisplay.cpp  DlgSettingsGridDisplay.h  DlgSettingsGridRemoval.cpp  DlgSettingsGridRemoval.h  DlgSettingsMainWindow.cpp  DlgSettingsMainWindow.h  DlgSettingsPointMatch.cpp  DlgSettingsPointMatch.h  DlgSettingsSegments.cpp  DlgSettingsSegments.h
src/Document/: DocumentModelDigitizeCurve.cpp
src/Export/: ExportToClipboard.h
src/Format/: FormatDateTime.cpp  FormatDegreesMinutesSecondsBase.cpp  FormatDegreesMinutesSecondsNonPolarTheta.cpp  FormatDegreesMinutesSecondsPolarTheta.cpp
src/Graphics/: GraphicsLinesForCurve.cpp
src/Grid/: GridClassifier.cpp  GridLog.cpp  GridLog.h
src/Import/: ImportCropping.cpp  (+5 more)
test/: four_axis_point_log_x.csv_expected_1  four_axis_point_log_y.csv_expected_1  log_extrapolation.csv_expected_1  run_cli_regression.sh  test_segment_fill.gnuplot_expected  time_scale_64bit.csv_expected_1  undo_redo.csv_expected_1  version5_3.csv_expected_1
tutorials/: auto-line-graph.html  auto-point-graph.html  manual-line-graph.html  manual-map.html  manual-point-graph.html
(+85 files in other folders)
